--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/agmatyja/myproj7.3#readme",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
-    "browser-sync": "^2.26.3"
+    "browser-sync": "^2.26.3",
+    "mkdirp": "^0.5.1"
   }
 }
