--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "init-project": "npm install && npm run init:dirs && npm run init:files && npm run init:gitignore",
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
-    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore"
-  },
+    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
+	"build": "npm run build:sass && npm run build:autoprefixer && npm run test",
+	"build:sass": "node-sass --output-style compact -o css sass",
+	"build:autoprefixer": "autoprefixer-cli css/style.css",
+
+	"build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",  
+	"watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
+	"watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css"
+	},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/agmatyja/myproj7.3.git"
@@ -25,6 +32,7 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "node-sass": "^4.11.0"
   }
 }
