--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-	"build": "npm run build:sass && npm run build:autoprefixer && npm run test",
-	"build:sass": "node-sass --output-style compact -o css sass",
-	"build:autoprefixer": "autoprefixer-cli css/style.css",
-
-	"build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",  
-	"watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
-	"watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css"
-	},
+    "build": "npm run build:sass && npm run build:autoprefixer && npm run test",
+    "build:sass": "node-sass --output-style compact -o css sass",
+    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch": "onchange -v -i sass -- npm run watch:sassprefixer",
+	"watch:sassprefixer": "npm run watch:sass && npm run watch:autoprefixer",
+    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch:autoprefixer": "autoprefixer-cli -o css/style.prefixed.css css/style.css"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/agmatyja/myproj7.3.git"
@@ -33,6 +34,7 @@
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "onchange": "^5.2.0"
   }
 }
