--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "onchange -v -i sass -- npm run watch:sassprefixer",
-	"watch:sassprefixer": "npm run watch:sass && npm run watch:autoprefixer",
+    "watch:sassprefixer": "npm run watch:sass && npm run watch:autoprefixer",
     "watch:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch:autoprefixer": "autoprefixer-cli -o css/style.prefixed.css css/style.css"
   },
@@ -35,6 +35,7 @@
     "browser-sync": "^2.26.3",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
     "onchange": "^5.2.0"
   }
 }
