--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "build": "npm run build:sass && npm run build:autoprefixer && npm run test",
+    "build": "npm run build:clean && npm run build:sass && npm run build:autoprefixer && npm run test",
+    "build:clean": "rimraf css",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "onchange -v -i sass -- npm run watch:sassprefixer",
     "watch:sassprefixer": "npm run watch:sass && npm run watch:autoprefixer",
     "watch:sass": "node-sass --output-style expanded --source-map true -o css sass",
-    "watch:autoprefixer": "autoprefixer-cli -o css/style.prefixed.css css/style.css"
+    "watch:autoprefixer": "autoprefixer-cli css/style.css",
+    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\""
   },
   "repository": {
     "type": "git",
@@ -33,9 +35,12 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
+    "globstar": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "onchange": "^5.2.0"
+    "nu-html-checker": "^0.1.0",
+    "onchange": "^5.2.0",
+    "rimraf": "^2.6.3"
   }
 }
